ember-bdi/tests/macros/compile-fail/from_term_transparent_unit_struct.rs
extern crate alloc;
use ember::agent::bdi::term::FromTerm;

#[derive(FromTerm)]
#[ember(transparent)]
struct Empty;

fn main() {}
